# gtk_project

./: .gitignore  CMakeLists.txt  main.c
